# testground

./: .gitignore  .pre-commit-config.yaml  ASSESSMENT.md  DEVELOPMENT_ROADMAP.md  Dockerfile  Makefile  README.md  cli.py  conftest.py  coverage.xml  docker-compose.yml  optimization-roadmap.md  pyproject.toml  requirements.txt  test_suite_analysis.md  unified-test-platform-design.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  godot-ci.yml  godot-e2e.yml
adapters/gdunit4/: observer.gd
adapters/godot/: __init__.py  observer.gd
adapters/python/: emitter.py
analyzers/: __init__.py  alerts.py  anomaly_detector.py  base.py  bug_discovery.py  llm_client.py  notifiers.py  quality_guard.py  report.py  report_templates.py  semantic_eval.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
debug_protocols/: loopexpedition_protocol.json  pogongshichongzou_protocol.json
drivers/: __init__.py
gateway/: __init__.py  main.py  requirements.txt  screenshot_storage.py  storage.py
schema/: __init__.py  events.py  events.schema.json  events.ts
scripts/: ci_e2e_smoke.py  test_layer_guard.py  test_loop.py  test_pogong.py
tests/: inject_demo_data.py  test_alerts.py  test_architecture_validation.py  test_ci_scripts.py  test_cli.py  test_drivers.py  test_e2e_bridge.py  test_event_bridge.py  test_godot_agents.py  test_integration.py  test_llm_eval.py  test_llm_pipeline.py  test_pipeline.py  test_platform.py  test_recorder.py  test_report.py  test_screenshots.py  test_state_tracker.py  test_websocket.py
timeline/: index.html
(+58 files in other folders)
